--- a/uzdik/index.html
+++ b/uzdik/index.html
@@ -25,7 +25,7 @@
         <div class="col-md-4">
           <h3>Apply now</h3>
           <p>Join our program and become a CS Olympiad champion!</p>
-          <a href="#" class="btn btn-primary">Apply</a>
+          <a href="https://forms.gle/VDD7YFuXqgBAFY626" target="_blank" class="btn btn-primary">Apply</a>
           <hr>
           <h3>Motivational slogans</h3>
           <ul class="list-unstyled">
