--- a/uzdik/index.html
+++ b/uzdik/index.html
@@ -1,85 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CS Olympiad Training</title>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <title>Random Letters Generator</title>
+  <!-- Include Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
-  <header class="bg-dark text-light py-3">
-    <div class="container">
-      <h1 class="display-4">CS Olympiad Training</h1>
-      <p class="lead mb-0">Helping students from town and village to study CS and win in olympiads</p>
-    </div>
-  </header>
+  <div class="container">
+    <h1>Random Letters Generator</h1>
+    <form id="letterForm">
+      <div class="form-group">
+        <label for="letters">Generated Letters:</label>
+        <input type="text" class="form-control" id="letters" readonly>
+      </div>
+      <div class="form-group">
+        <label for="answer">Your Answer:</label>
+        <input type="text" class="form-control" id="answer">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    <div id="result"></div>
+  </div>
 
-  <section class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8">
-          <!-- Infographic here -->
-          <img src="infographic.webp" class="img-fluid" alt="Infographic">
-        </div>
-        <div class="col-md-4">
-          <h3>Apply now</h3>
-          <p>Join our program and become a CS Olympiad champion!</p>
-          <a href="https://forms.gle/VDD7YFuXqgBAFY626" target="_blank" class="btn btn-primary">Apply</a>
-          <hr>
-          <h3>Motivational slogans</h3>
-          <ul class="list-unstyled">
-            <li>"You have the potential to be a CS superstar!"</li>
-            <li>"Challenge yourself and reach new heights in CS!"</li>
-            <li>"Become a CS Olympiad champion and change your life!"</li>
-          </ul>
-        </div>
-      </div>
-      <hr>
-      <h2>Recent results</h2>
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="results-1.png" class="d-block w-100" alt="Results 1">
-          </div>
-          <div class="carousel-item">
-            <img src="results-2.png" class="d-block w-100" alt="Results 2">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-      <hr>
-      <h2>Video</h2>
-      <div class="row">
-        <div class="col-md-8">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bYIaxypRBtI"></iframe>
-          </div>
-        </div>
-      </div>
-      <p class="mt-3">Hear from our students, teachers, and parents about their experience with our CS Olympiad Training program!</p>
-    </div>
-  </section>
-  <footer class="bg-dark text-light py-3">
-    <div class="container">
-      <p class="mb-0">Copyright © 2023 CS Olympiad Training.
-      All rights reserved.</p>
-    </div>
-  </footer>
-  <!-- jQuery and Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
-      integrity="sha384-TUoW6UOz6mZDolUZdQjj5r5ZX5i6bOg6rvy98tkJz9XW6xH2zZypKSybJIOYy8nF"
-      crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-mMQEfFzKv9TrAP4gsLZuV7Z+xjKdYVbWlAeO+hVJyGtLgNtOMG0fTmdZtAGMk/OU"
-      crossorigin="anonymous"></script>
+  <!-- Include Bootstrap JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+  <script>
+    // JavaScript code for generating random letters and checking the answer
+    $(document).ready(function() {
+      // Function to generate random letters
+      function generateRandomLetters() {
+        var letters = '';
+        var length = Math.floor(Math.random() * 9) + 2; // Random length between 2 and 10
+        var characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz';
+        for (var i = 0; i < length; i++) {
+          letters += characters.charAt(Math.floor(Math.random() * characters.length));
+        }
+        return letters;
+      }
+
+      // Generate random letters and display them
+      var generatedLetters = generateRandomLetters();
+      $('#letters').val(generatedLetters);
+
+      // Handle form submission
+      $('#letterForm').submit(function(event) {
+        event.preventDefault(); // Prevent default form submission
+        var answer = $('#answer').val();
+        var factorial = 1 / (generatedLetters.length * (generatedLetters.length - 1)); // Calculate factorial
+        var correctAnswer = factorial.toFixed(4); // Limit answer to 4 decimal places
+
+        // Check the user's answer and display the result
+        if (answer == correctAnswer) {
+          $('#result').html('<div class="alert alert-success">Correct Answer!</div>');
+        } else {
+          $('#result').html('<div class="alert alert-danger">Incorrect Answer!</div>');
+        }
+      });
+    });
+  </script>
 </body>
 </html>
