--- a/uzdik/index.html
+++ b/uzdik/index.html
@@ -1,64 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Random Letters Generator</title>
-  <!-- Include Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <title>Random Letters Game</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        function generateRandomLetters() {
+            var randomLetters = '';
+            var numberOfLetters = Math.floor(Math.random() * 9) + 2; // Generate a random number between 2 and 10
+            var possibleLetters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz';
+
+            for (var i = 0; i < numberOfLetters; i++) {
+                var randomIndex = Math.floor(Math.random() * possibleLetters.length);
+                randomLetters += possibleLetters.charAt(randomIndex);
+            }
+
+            document.getElementById('randomLetters').innerHTML = randomLetters;
+            document.getElementById('outputForm').style.display = 'block';
+        }
+
+        function calculateFactorial() {
+            var input = document.getElementById('answer').value;
+            var numberOfLetters = document.getElementById('randomLetters').innerHTML.length;
+            var factorial = 1;
+
+            for (var i = 1; i <= numberOfLetters; i++) {
+                factorial *= i;
+            }
+
+            document.getElementById('result').innerHTML = factorial;
+
+            if (input == factorial) {
+                document.getElementById('correctAnswer').style.display = 'block';
+            } else {
+                document.getElementById('wrongAnswer').style.display = 'block';
+            }
+        }
+    </script>
 </head>
 <body>
-  <div class="container">
-    <h1>Random Letters Generator</h1>
-    <form id="letterForm">
-      <div class="form-group">
-        <label for="letters">Generated Letters:</label>
-        <input type="text" class="form-control" id="letters" readonly>
-      </div>
-      <div class="form-group">
-        <label for="answer">Your Answer:</label>
-        <input type="text" class="form-control" id="answer">
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    <div id="result"></div>
-  </div>
-
-  <!-- Include Bootstrap JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-  <script>
-    // JavaScript code for generating random letters and checking the answer
-    $(document).ready(function() {
-      // Function to generate random letters
-      function generateRandomLetters() {
-        var letters = '';
-        var length = Math.floor(Math.random() * 9) + 2; // Random length between 2 and 10
-        var characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz';
-        for (var i = 0; i < length; i++) {
-          letters += characters.charAt(Math.floor(Math.random() * characters.length));
-        }
-        return letters;
-      }
-
-      // Generate random letters and display them
-      var generatedLetters = generateRandomLetters();
-      $('#letters').val(generatedLetters);
-
-      // Handle form submission
-      $('#letterForm').submit(function(event) {
-        event.preventDefault(); // Prevent default form submission
-        var answer = $('#answer').val();
-        var factorial = 1 / (generatedLetters.length * (generatedLetters.length - 1)); // Calculate factorial
-        var correctAnswer = factorial.toFixed(4); // Limit answer to 4 decimal places
-
-        // Check the user's answer and display the result
-        if (answer == correctAnswer) {
-          $('#result').html('<div class="alert alert-success">Correct Answer!</div>');
-        } else {
-          $('#result').html('<div class="alert alert-danger">Incorrect Answer!</div>');
-        }
-      });
-    });
-  </script>
+    <div class="container mt-5">
+        <h1>Random Letters Game</h1>
+        <p>Click the button below to generate a random set of letters.</p>
+        <button class="btn btn-primary" onclick="generateRandomLetters()">Generate Letters</button>
+        <div class="mt-3" id="randomLetters"></div>
+        <div id="outputForm" style="display: none;">
+            <form class="mt-3">
+                <div class="form-group">
+                    <label for="answer">Enter your answer:</label>
+                    <input type="number" class="form-control" id="answer" required>
+                </div>
+                <button type="button" class="btn btn-primary" onclick="calculateFactorial()">Submit</button>
+            </form>
+            <div id="correctAnswer" style="display: none;">
+                <div class="alert alert-success mt-3">Correct answer!</div>
+            </div>
+            <div id="wrongAnswer" style="display: none;">
+                <div class="alert alert-danger mt-3">Wrong answer! The correct answer is: <span id="result"></span></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
